docs: add docs of employee routes
