# src/config/swagger.yaml
@@ -6,7 +6,7 @@ info:
 
 components:
   securitySchemes:
-    bearerAuth: # arbitrary name for the security scheme
+    bearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
@@ -186,6 +186,7 @@ paths:
         - bearerAuth: []
       tags:
         - Employee
+      description: Add employee to database
       requestBody:
         required: true
         content:
@@ -210,13 +211,108 @@ paths:
             example:
               firstName: Saba
               lastName: Vartasashvili
-              startedAt: '2016-01-01'
-              birthDate: '2002-01-01'
+              startedAt: '2022-03-11'
+              birthDate: '2002-01-08'
               personalNumber: '12345678910'
-              position: Xaker
+              position: Web developer
               id: 62a37de8c9bc3021399cad31
       responses:
         '201':
           description: Employee saved successfully.
+        '400':
+          description: Employee with the same personal number already exists.
         '404':
           description: Company not found.
+
+  /one-employee:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - Employee
+      description: Fetch details about one employee
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+            example:
+              id: 62a5ae7308540d6d70b0820b
+      responses:
+        '200':
+          description: Employee details successfully fetched.
+        '404':
+          description: Employee not found.
+
+  /delete-employee:
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Employee
+      description: Delete one Employee from the database
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+            example:
+              id: 62a5ae7308540d6d70b0820b
+      responses:
+        '200':
+          description: Employee deleted successfully.
+        '404':
+          description: Not found.
+
+  /change-employee:
+    put:
+      security:
+        - bearerAuth: []
+      tags:
+        - Employee
+      description: Change details of certain employee
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                personalNumber:
+                  type: string
+                startedAt:
+                  type: string
+                birthDate:
+                  type: string
+                position:
+                  type: string
+                id:
+                  type: string
+                companyId:
+                  type: string
+            example:
+              firstName: Saba
+              lastName: Vartasashvili
+              personalNumber: '12345678910'
+              startedAt: '2022-01-25'
+              birthDate: '2000-09-12'
+              position: 'Full stack developer'
+              id: 62a5ae7308540d6d70b0820b
+              companyId: 62a5c32a6a3db4691701dc43
+      responses:
+        '201':
+          description: Employee details changed successfully.
+        '404':
+          description: Not found.
